updated playback logic